# attn-unet-shrub-id

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
notebooks/: Attention-Unet-hawthron.ipynb
scripts/: run_inference.py  run_training.py
src/: dataset.py  inference.py  model.py  train.py  utils.py
src/shrubnet/: dataset.py  inference.py  model.py  train.py  utils.py
tests/: conftest.py  test_dataset.py  test_inference.py  test_model.py  test_util.py
tests/data/: test_input.tif  test_mask.tif
tests/data/sample/images/: shrubs_0.tif  shrubs_101.tif  shrubs_104.tif  shrubs_11.tif  shrubs_117.tif  shrubs_124.tif  shrubs_126.tif  shrubs_131.tif  shrubs_132.tif
tests/data/sample/labels/: shrubs_0.tif  shrubs_101.tif  shrubs_104.tif  shrubs_11.tif  shrubs_117.tif  shrubs_124.tif  shrubs_126.tif  shrubs_131.tif  shrubs_132.tif
